Update lib package